# zizu

./: .dockerignore  .env.example  .gitignore  .semgrepignore  Dockerfile  README.md  compose.yaml  pom.xml
.github/workflows/: build.yml  windows-client.yml
docs/: foundation-checklist.md  github-secrets.md  task-1-status.md  task-3-status.md  task-4-status.md  task-5-status.md  task-6-status.md  uml-er-primer.md
fuzzing/: paths.txt
scripts/: create-https-keystore.ps1  create-signature-keystore.ps1
semgrep/: rules.yml
src/main/java/ru/danilavak/zizu/: ZizuApplication.java
src/main/resources/: application.properties
src/main/resources/db/migration/: V1__foundation.sql  V2__license_module.sql  V3__malware_signatures_module.sql  V4__signature_files_module.sql
src/test/java/ru/danilavak/zizu/: AuthControllerIntegrationTests.java  BinarySignatureExportIntegrationTests.java  ClientContractIntegrationTests.java  DigitalSignatureServiceIntegrationTests.java  HealthEndpointIntegrationTests.java  JsonTestHelper.java  LicenseModuleIntegrationTests.java  MalwareSignatureFileIntegrationTests.java  MalwareSignatureIntegrationTests.java  ZizuApplicationTests.java
src/test/resources/: application.properties  test-signature.p12
windows-client/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  Directory.Build.props  HybridCRT.props  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Project.idl  README.md  Styles.xaml  app.manifest  pch.h  zizu-windows-client.vcxproj
windows-client/resources/: resource.h  tray.rc
windows-client/src/: main.cpp
(+73 files in other folders)
